[tool.poetry]
name = "dblame"
version = "0.1.3"
description = "TK frontend to systemd-analyze"
authors = ["Michael John <michael.john@gmx.at>"]
readme = "README.md"
license = "GPL"

[tool.poetry.scripts]
dblame = 'dblame.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/dblame"
repository = "https://github.com/amstelchen/dblame"
documentation = "https://github.com/amstelchen/dblame"
